# hlm12rag

./: .gitignore  LICENSE  README.md  _reqs.txt  pyproject.toml
data/docs_sample/: doc1.txt  doc2.txt  doc3.txt
data_sample/: cyber-punk.txt  the-dry-bog.txt  the-last-kingdom.txt
dev/: design.ipynb  etl.ipynb  modelling.ipynb  selection.ipynb
src/hlm12rag/: etl.py  modelling.py  training.py
tests/: test_modelling.py
